Actualizando componente oit
+El componente de Oit fue superficialmente actualizado a Itos para su progresiva actualización

--- a/Cliente_web/Cliente_webFront/src/app/oits/oits.component.css
+++ b/Cliente_web/Cliente_webFront/src/app/oits/oits.component.css
@@ -81,3 +81,5 @@ button.combo-box:hover {
   width: 100%;
   border-collapse: collapse;
 }
+
+/*==================================================00*/
