--- a/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
@@ -15,7 +15,7 @@
     <button routerLink="/principalPageUsers/Contratos">Contratos</button>
     <button routerLink="/principalPageUsers/Proveedores">Proveedores</button>
     <button routerLink="/principalPageUsers/Documentos">Documentos</button>
-    <button routerLink="/principalPageUsers/OIT">OITs</button>
+    <button routerLink="/principalPageUsers/Itos">Itos</button>
     <button routerLink="/principalPageUsers/Representantes">Reprecentantes</button>
 
   </aside>
