--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
@@ -15,7 +15,7 @@
     <button routerLink="/principalPage/Contratos">Contratos</button>
     <button routerLink="/principalPage/Proveedores">Proveedores</button>
     <button routerLink="/principalPage/Documentos">Documentos</button>
-    <button routerLink="/principalPage/OIT">OITs</button>
+    <button routerLink="/principalPage/Itos">Itos</button>
     <button routerLink="/principalPage/Representantes">Reprecentantes</button>
     <button routerLink="/principalPage/Opcion6">Opción 6</button>
     <button routerLink="/principalPage/Opcion7">Opción 7</button>
