--- a/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/oits/oits.component.html
@@ -25,470 +25,35 @@
 
 <div style="height: 20px"></div>
 
+<div class="botonesCrud-container">
+  <button class="botonesCrud" > Crear Representante</button>
+  <button class="botonesCrud"> Actualizar Representante</button>
+  <button class="botonesCrud"> Eliminar Representante</button>
+</div>
+
+<div style="height: 30px"></div>
 
 <table>
   <thead>
   <tr class="encabezado">
+    <td>ID</td>
     <td>RUT</td>
-    <td>Razón Social</td>
-    <td>Dirección</td>
+    <td>Nombre</td>
+    <td>Apellido</td>
     <td>Teléfono</td>
     <td>Correo</td>
-    <td>Repesentante</td>
-    <td>Acceso</td>
+    <td>Area</td>
   </tr>
 
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
+  <tr *ngFor="let ito of itos; let i = index">
+    <td>{{ ito.id }}</td>
+    <td>{{ ito.rut}}</td>
+    <td>{{ ito.nombre }}</td>
+    <td>{{ ito.apellido }}</td>
+    <td>{{ ito.telefono }}</td>
+    <td>{{ ito.correo }}</td>
+    <td>{{ ito.area }}</td>
   </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 1</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3 </td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 6</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 7</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 8</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 9</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
-  <tr>
-    <td>Mostrando algo 10</td>
-    <td>Mostrando algo 2</td>
-    <td>Mostrando algo 3</td>
-    <td>Mostrando algo 4</td>
-    <td>Mostrando algo 5</td>
-    <td>Mostrando algo 6</td>
-  </tr>
-
 
   </thead>
 </table>
@@ -499,3 +64,4 @@
   <button class="buttons" style="flex: 1; margin-right: 10px;">Página Anterior</button>
   <button class="buttons" style="flex: 1;">Página Siguiente</button>
 </div>
+
