--- a/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/proveedores/proveedores.component.html
@@ -8,9 +8,10 @@
       <option value="opcion1">Rut</option>
       <option value="opcion2">Razón Social</option>
       <option value="opcion3">Dirección</option>
-      <option value="opcion4">Teléfono</option>
-      <option value="opcion5">Correo</option>
-      <option value="opcion6">Representante</option>
+      <option value="opcion4">Comuna</option>
+      <option value="opcion5">Teléfono</option>
+      <option value="opcion6">Correo</option>
+      <option value="opcion7">Representante</option>
     </select>
   </div>
   <div>
@@ -120,7 +121,7 @@
     <h2>Actualizar Proveedor</h2>
     <form (ngSubmit)="actualizarElProveedor()">
       <label>RUT:</label>
-      <input type="text" [(ngModel)]="proveedorActual.rut" name="rut" required>
+      <input type="text" [(ngModel)]="proveedorActual.rut" name="rut" disabled>
 
       <label>Razón Social:</label>
       <input type="text" [(ngModel)]="proveedorActual.razon_social" name="razon_social" required>
