Creando nuevo componente
+El componente "TiposDeDocumentos" fue creado para gestionar posteriormente los documentos"
+Comenzaron los cruds de Tipos de documentos con el "Create"

--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
@@ -17,15 +17,14 @@
     <button routerLink="/principalPage/Documentos">Documentos</button>
     <button routerLink="/principalPage/Itos">Itos</button>
     <button routerLink="/principalPage/Representantes">Reprecentantes</button>
-    <button routerLink="/principalPage/Opcion6">Opción 6</button>
-    <button routerLink="/principalPage/Opcion7">Opción 7</button>
-
 
     <div style="height: 20px;"></div>
 
     <div style="font-size: 25px;font-weight: bold; color: white"  >Opciones de administrador: </div>
     <div style="height: 20px;"></div>
     <button routerLink="/principalPage/GestionarUsuarios">Gestionar Usuarios</button>
+    <button routerLink="/principalPage/TipoDocumento">Tipos de Documentos</button>
+
 
 
 
