--- a/Cliente_web/Cliente_webFront/src/app/tipo-documento/tipo-documento.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/tipo-documento/tipo-documento.component.html
@@ -17,7 +17,7 @@
         <td>{{ documento.nombre }}</td>
         <td>
           <button class="botonesCrud" (click)="abrirModal('editar', documento)">Editar</button>
-          <button class="botonesCrud" (click)="abrirModal('eliminar', documento)">Eliminar</button>
+          <button style="margin-left: 10px" class="botonesCrud" (click)="abrirModal('eliminar', documento)">Eliminar</button>
         </td>
       </tr>
       </tbody>
